--- a/galerie.html
+++ b/galerie.html
@@ -50,18 +50,39 @@
 		<div class="pic">
 			<a href="pics/affiche_gal.png">
 			<img src="pics/affiche_gal.png">
-			<p></p>
+			<p>notre facebook</p>
 			</a>
 		</div>
 
+		<div class="pic">
+			<a href="pics/galerie6.JPG">
+			<img src="pics/galerie6.JPG">
+			<p>le pas de tir </p>
+			</a>
+		</div>
+
+		<div class="pic">
+			<a href="pics/galerie7.JPG">
+			<img src="pics/galerie7.JPG">
+			<p>le terrain</p>
+			</a>
+		</div>
+
+		<div class="pic">
+			<a href="pics/galerie8.JPG">
+			<img src="pics/galerie8.JPG">
+			<p>pelouse naturelle</p>
+			</a>
+		</div>
+
+		<!-- pour rajouter une entrée
 		<div class="pic">
 			<a href="pics/galerie.JPG">
 			<img src="pics/galerie.JPG">
 			<p></p>
 			</a>
 		</div>
-
-
+		-->
 	</div>
 
 
