--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 
 						<li class="nav-item">
 							<a class="nav-link" href="info.html">INFOS PRATIQUES</a>
-						</li>
+						</li> 
 
-						<li class="nav-item">
+						<!--<li class="nav-item">
 							<a class="nav-link" href="#">PRÉSENTATION DU CLUB</a>
-						</li>   
+						</li>  --> 
 
 						<li class="nav-item">
 							<a class="nav-link" href="galerie.html">GALERIE</a>
@@ -131,7 +131,7 @@
 				</div>
 			</div>
 			<div class="footer">
-				<p style="align-self: center;"> <a href="https://www.mangerbouger.fr">Pour votre santé, pratiquez une activité physique régulière.</a></p>
+				<p style="align-self: center; text-align: center;"> <a href="https://www.mangerbouger.fr">Pour votre santé, pratiquez une activité physique régulière.</a></p>
 			</div>
 		</div>
 	</div>
