--- a/info.html
+++ b/info.html
@@ -34,7 +34,7 @@
 			<p>Les archers du pays de Fayence vous accueillent de 7 à 97 ans. Selon votre âge, les <a href="https://www.ffta.fr/nos-clubs/la-licence-federale/les-categories-dages-2020-2021">catégories</a> sont les suivantes :</p>
 			<p>• Poussin (jusqu'à 10 ans) • Benjamin (11 à 12 ans) • Minime (13 à 14) • Cadet (15 à 17) • Junior (18 à 20) • Senior I (21 à 39) • Senior II (40 à 59) • Senior III (60 et plus)</p>
 			<p>Le terrain de tir est situé au chemin notre Dame, lieu-dit la camandoule, 83440 Fayence.</p>
-			<p>Les jours d'entraînement sont les mercredi et samedi, en période scolaire, de 14h à 16, suivant les conditions météo (pas de tir par temps orageux).</p>
+			<p>Les jours d'entraînement sont les mercredi et samedi, en période scolaire, de 14h à 16h, suivant les conditions météo (pas de tir par temps orageux).</p>
 			<p>Le terrain dispose d'un parking et un accès PMR (rampe) ainsi que d'un abri.</p>
 			<p>L'adhésion au club (licence FFTA comprise) est de 140€ pour les adultes et 110€ pour les enfants (possibilité d'obtenir un tarif de famille).</p>
 			<p>Pour vos débuts, le club peut mettre à disposition un prêt d'arc, soumis à caution. Reste à votre charge un kit de matériel personnel, disponible au club : Carquois, 6 flèches, une palette, un bracelet, une dragonne, un repose-arc.</p>
