--- a/partenaires.html
+++ b/partenaires.html
@@ -13,7 +13,7 @@
 
 		<div class="part_text">
 			<a href="#"><h3>Nom du partenaire</h3></a>
-			<p>Nous remercions #### qui nous prête gracieusement le terrain du tir à l'arc !</p>
+			<p>Nous remercions ##### qui nous prête gracieusement le terrain du tir à l'arc !</p>
 		</div>
 	</div>
 
@@ -23,7 +23,7 @@
 
 		<div class="part_text">
 			<a href="#"><h3>Nom du partenaire</h3></a>
-			<p>Nous remercions #### qui nous prête gracieusement le terrain du tir à l'arc !</p>
+			<p>Nous remercions ##### qui nous prête gracieusement le terrain du tir à l'arc !</p>
 		</div>
 	</div>
 
@@ -33,7 +33,7 @@
 
 		<div class="part_text">
 			<a href="#"><h3>Nom du partenaire</h3></a>
-			<p>Nous remercions #### qui nous prête gracieusement le terrain du tir à l'arc !</p>
+			<p>Nous remercions ##### qui nous prête gracieusement le terrain du tir à l'arc !</p>
 		</div>
 	</div>
 </body>
