--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<ul class="navbar-nav">
 
 						<li class="nav-item">
-							<a class="nav-link" href="#">ACCUEIL</a>
+							<a class="nav-link" href="index.html">ACCUEIL</a>
 						</li>
 
 						<li class="nav-item">
