--- a/partenaires.html
+++ b/partenaires.html
@@ -75,33 +75,35 @@
 			<!-- Fin de la nav bar -->
 	<div class="part_container">
 
-		<img src="pics/PH.png">	
+		<img src="pics/occitan.jpg">	
 
 		<div class="part_text">
-			<a href="#"><h3>Nom du partenaire</h3></a>
-			<p>Nous remercions ##### qui nous prête gracieusement le terrain du tir à l'arc !</p>
+			<a href="https://www.archerie83.com"><h3>Occitan archerie 83</h3></a>
+			<p>Pour un matériel toujours de qualité !</p>
 		</div>
 	</div>
 
 	<div class="part_container">
 
-		<img src="pics/PH.png">	
+		<img src="pics/fayence.png">	
 
 		<div class="part_text">
-			<a href="#"><h3>Nom du partenaire</h3></a>
-			<p>Nous remercions ##### qui nous prête gracieusement le terrain du tir à l'arc !</p>
+			<a href="https://www.paysdefayence.com/"><h3>Fayence</h3></a>
+			<p>Merci à la commune de Fayence de nous prêter le terrain !</p>
 		</div>
 	</div>
 
 	<div class="part_container">
 
-		<img src="pics/PH.png">	
+		<img src="pics/fayence.png">	
 
 		<div class="part_text">
-			<a href="#"><h3>Nom du partenaire</h3></a>
-			<p>Nous remercions ##### qui nous prête gracieusement le terrain du tir à l'arc !</p>
+			<a href="https://www.cc-paysdefayence.fr/"><h3>Communauté de communes</h3></a>
+			<p>Merci à la communauté de communes de nous subventionner !</p>
 		</div>
 	</div>
+
+	
 
 	<!-- Footer -->
 			<div class="footer">
